// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericToggleTest renders description content is JSX.Element 1`] = `
<div
  className="genericToggleComponent"
>
  <div
    className="toggleContainer"
  >
    <div
      className="toggleName"
    >
      test name
    </div>
    <StyledToggleBase
      ariaLabel="test name"
      checked={true}
      className="toggle"
      id="test-id-1"
      offText="Off"
      onClick={[Function]}
      onText="On"
    />
  </div>
  <div
    className="toggle-description"
  >
    <h1>
      hello
    </h1>
  </div>
</div>
`;

exports[`GenericToggleTest renders description content is string 1`] = `
<div
  className="genericToggleComponent"
>
  <div
    className="toggleContainer"
  >
    <div
      className="toggleName"
    >
      test name
    </div>
    <StyledToggleBase
      ariaLabel="test name"
      checked={true}
      className="toggle"
      id="test-id-1"
      offText="Off"
      onClick={[Function]}
      onText="On"
    />
  </div>
  <div
    className="toggle-description"
  >
    test string description
  </div>
</div>
`;

exports[`GenericToggleTest renders toggle enable = false 1`] = `
<div
  className="genericToggleComponent"
>
  <div
    className="toggleContainer"
  >
    <div
      className="toggleName"
    >
      test name
    </div>
    <StyledToggleBase
      ariaLabel="test name"
      checked={false}
      className="toggle"
      id="test-id-1"
      offText="Off"
      onClick={[Function]}
      onText="On"
    />
  </div>
  <div
    className="toggle-description"
  >
    test description
  </div>
</div>
`;

exports[`GenericToggleTest renders toggle enable = true 1`] = `
<div
  className="genericToggleComponent"
>
  <div
    className="toggleContainer"
  >
    <div
      className="toggleName"
    >
      test name
    </div>
    <StyledToggleBase
      ariaLabel="test name"
      checked={true}
      className="toggle"
      id="test-id-1"
      offText="Off"
      onClick={[Function]}
      onText="On"
    />
  </div>
  <div
    className="toggle-description"
  >
    test description
  </div>
</div>
`;
